--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "module-alias": "^2.2.3",
     "moment": "^2.29.4",
     "mongodb-backup": "^1.6.9",
     "mongoose": "^5.6.4",
@@ -25,5 +26,8 @@
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.4",
     "request-promise": "^4.2.6"
+  },
+  "_moduleAliases": {
+    "@": "./"
   }
 }
